# libgfx

./: CMakeLists.txt  Makefile  readme.md
include/: Matrix3.h  Quaternion.h  Ray.h  Rotation.h  Scalar.h  Sphere.h  Vector3.h  gfx.h
src/: Ray.cpp  Scalar.cpp  Sphere.cpp  Vector3.cpp
tests/: test.cpp
